--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Open + Sans:700");
 
-
 /* Global Styles */
 :root {
   --primary-color: #dc3545;
@@ -17,6 +16,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 }
 
 body {
@@ -25,10 +25,12 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
+  
+ 
 }
 
 a {
-  color: #757171;
+  color: #000;
   text-decoration: none;
 }
 
@@ -209,7 +211,6 @@ img {
   grid-gap: 1rem;
 }
 
-
 .btn {
   position: relative;
   /* margin-top:10%; */
@@ -257,7 +258,6 @@ img {
   transition: opacity 0.2s ease-in;
   outline: none;
   box-shadow: 4px 4px 0px 0px rgb(202, 201, 201);
-
 }
 
 .button:hover {
@@ -514,4 +514,32 @@ table th {
   border: 1px black solid;
 }
 
+/* 
+/* Create three equal columns that floats next to each other */
+/* .column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+/* } */
 
+.userStyle {
+  width: 70vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(270px, 1fr));
+  grid-row-gap: 2rem;
+  grid-column-gap: 1rem;
+}
+@media screen and (min-width: 776px) {
+  .userStyle {
+    width: 90vw;
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  }
+}
+@media screen and (min-width: 992px) {
+  .userStyle {
+    width: 95vw;
+    max-width: 1050px;
+  }
+}
